fdo#81357 no fallback for special codes without country

Thanks to Justin Luth for the hint.

Change-Id: I97bde18814368e589e2a1c275457489a0d7392d4